--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "npm publish dist": "publish to npm"
   },
   "name": "dd-virt-list",
-  "version": "0.10.3",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -28,14 +28,20 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.0.0",
+    "@angular/cli": "~6.2.5",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
     "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
     "@angular/language-service": "^6.0.0",
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.8.5",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
+    "core-js": "^2.4.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -43,10 +49,13 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.1.0",
+    "ng-packagr": "^4.3.1",
     "protractor": "~5.1.2",
+    "rxjs": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.x"
-  }
+    "typescript": "2.7.x",
+    "zone.js": "^0.8.26"
+  },
+  "dependencies": {}
 }
